[tool.poetry]
name = "ping-pong"
version = "0.1.0"
description = ""
authors = ["Akinola Abiodun <akinolaemmanuel49@gmail.com>"]
readme = "README.md"
packages = [{include = "ping_pong"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.4.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
